Added dismas.html and made all corrections requested by client.

--- a/art-program.html
+++ b/art-program.html
@@ -54,17 +54,17 @@
                 <li><a href="literacy-program.html">Literacy Program</a></li>
                 <li><a href="gavel-club.html">Gavel Club (Toastmasters)</a></li>
                 <li><a href="veteran-posts.html">Veteran Posts</a></li>
-                <li><a href="merit-dorm.html">Merit Dorm</a></li>
+                <li><a href="merit-dorm.html">MERIT Dorm</a></li>
               </ul>
             </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How To Help <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="donations.html">Donations</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
+                <li><a href="prayer.html">Prayer to St.Dismas</a></li>
+
+                
+                
               </ul>
             </li>
             <li><a href="board.html">Board of Directors</a></li>
@@ -78,7 +78,21 @@
 
   <div class="container-fluid">
     <div class="row">
-      <div class="col-xs-12 col-sm-4 col-md-3">
+      <div class="col-xs-12 col-sm-8 col-sm-push-4 col-md-9 col-md-push-3 main-text">
+        <h1 class="text-center ftg">Art Program</h1>
+        <p class="bring-down">
+          God has gifted some inmates with art talent. It has been said, "When we make art, we become the art we are making . . . it’s kind of a circle!!!”
+        </p>
+        <p>
+          The inmate artist works on the art and the art works on the inmate. It encourages self-expression, reduces anger and frustration, helps to control aggression, combats depression and helps to heal ones brokenness. Most important, however, it gives the inmate the realization and appreciation of God’s gift of talent to the inmate artist.
+        </p>
+        <img src="images/sculpture.JPG" class="main-column-img center-block img-responsive" alt="Sculpture of Jesus's head, created by an inmate in the art program.">
+        <figcaption class="cursive text-center">"Ball Field" Clay</figcaption>
+        <img src="images/sculpture2.JPG" class="main-column-img center-block img-responsive" alt="Another sculpture of Jesus's head, created by an inmate in the art program.">
+        <figcaption class="cursive text-center">"Prison Soap"</figcaption>
+
+      </div>
+      <div class="col-xs-12 col-sm-4 col-sm-pull-8 col-md-3 col-md-pull-9">
         <aside class="text-center">
           <p>
             “I was in prison and you came to visit me...
@@ -88,19 +102,11 @@
             <br>&mdash;Matthew 25:36, 40
             <br>
           </p>
-          <img src="images/easter-cross.jpg" class="side-image" alt="Cross at the end of a long cavern, shining brightly like the light at the end of a tunnel." />
+          <img src="images/art-drawing-small.jpg" class="side-image" alt="Jesus washing the foot of a black man while the disciples look on." />
+          <img class="side-image" src="images/top-hat.jpg" alt="Black man in a tuxedo and top-hat." />
+          <img class="side-image" src="images/jesus-flock.jpg" alt="Painting of Jesus in a pastoral setting holding a crook and guiding a flock of sheep." />
+          <img class="side-image" src="images/meeting-demand.jpg" alt="Digital art cover of a pamphlet created by the inmates to teach others how to maximize the efficiency of crops. Depicts two farmers with anime-spiked hair, both wearing blue overalls, one holding a shovel, the other a hoe. A dog and several ducks loiter in the foreground. Behind them, a big red barn and a phallic silver silo loom over the scene." />
         </aside>
-      </div>
-      <div class="col-xs-12 col-sm-8 col-md-9 main-text">
-        <h1 class="text-center ftg">Art Program</h1>
-        <p class="bring-down">
-          God has gifted some inmates with art talent. It has been said, "When we make art, we become the art we are making . . . it’s kind of a circle!!!”
-        </p>
-        <img src="images/sculpture.JPG" class="main-column-img center-block responsive" alt="Sculpture of Jesus's head, created by an inmate in the art program.">
-        <p>
-          The inmate artist works on the art and the art works on the inmate. It encourages self-expression, reduces anger and frustration, helps to control aggression, combats depression and helps to heal ones brokenness. Most important, however, it gives the inmate the realization and appreciation of God’s gift of talent to the inmate artist.
-        </p>
-        <img src="images/sculpture2.JPG" class="main-column-img center-block responsive" alt="Another sculpture of Jesus's head, created by an inmate in the art program.">
       </div>
     </div>
   </div>
