--- a/farm-program.html
+++ b/farm-program.html
@@ -54,17 +54,17 @@
                 <li><a href="literacy-program.html">Literacy Program</a></li>
                 <li><a href="gavel-club.html">Gavel Club (Toastmasters)</a></li>
                 <li><a href="veteran-posts.html">Veteran Posts</a></li>
-                <li><a href="merit-dorm.html">Merit Dorm</a></li>
+                <li><a href="merit-dorm.html">MERIT Dorm</a></li>
               </ul>
             </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How To Help <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="donations.html">Donations</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
+                <li><a href="prayer.html">Prayer to St.Dismas</a></li>
+
+                
+                
               </ul>
             </li>
             <li><a href="board.html">Board of Directors</a></li>
@@ -78,7 +78,25 @@
 
   <div class="container-fluid">
     <div class="row">
-      <div class="col-xs-12 col-sm-4 col-md-3">
+      <div class="col-xs-12 col-sm-8 col-sm-push-4 col-md-9 col-md-push-3 main-text">
+        <h1 class="text-center ftg">Farm Program</h1>
+        <p>
+          This is a chapel program that Saint Dismas not only sponsors but also started. Saint Dismas Prison Ministry provided all the initial tools, hoses, seed, and boots, and even supplied lemonade to help combat the heat and sweat of a hard day's work.
+        </p>
+        <p>
+          In addition, The Foundation published and printed farm manuals written by inmates to be used in the trainin classes.
+        </p>
+        <p>
+          The farm supplies the prison commissary with thousands of pounds of fresh produce at no cost to the prison. <span class="cursive">However, most important, it gives the inmate farm workers a sense of pride in accomplishment as they participate with God in His creation.</span>
+        </p>
+        <img src="images/farm.JPG" class="main-column-img center-block responsive" alt="Deacon holding vegetables just harvested by the inmates working in the background.">
+
+        <img src="images/farm3.jpeg" class="main-column-img center-block responsive" alt="Group picture of inmates working in the farm field and displaying the produce they have harvested.">
+
+        <img src="images/farm2.JPG" class="main-column-img center-block responsive" alt="Group picture of inmates, Deacon, and other officials displaying the fruits of their labor.">
+
+      </div>
+      <div class="col-xs-12 col-sm-4 col-sm-pull-8 col-md-3 col-md-pull-9">
         <aside class="text-center">
           <p>
             When Jesus was berated for
@@ -89,69 +107,15 @@
             <br>but sinners." &mdash;Mark 2:17
             <br>
           </p>
-          <br><br><br><br>
-          <img src="images/farm-produce.jpg" class="side-image" alt="Tomatos in a white bowl, along with lettuce, all grown by the inmates working with the Saint Dismas Prison Ministry." />
+          <img src="images/farm-produce.jpg" class="side-image bring-down img-responsive" alt="Tomatos in a white bowl, along with lettuce, all grown by the inmates working with the Saint Dismas Prison Ministry." />
+          <img src="images/squash.jpeg" class="side-image img-responsive" alt="Bunch of bright yellow squash arranged on a green cloth." />
+          <img src="images/produce.jpeg" class="side-image img-responsive" alt="Group of vegetables (orange pepper, corn in husk, cucumber, onion) arranged on a glass table." />
+          <img src="images/tomatos.jpeg" class="side-image img-responsive" alt="Group of vegetables (orange pepper, corn in husk, cucumber, onion) arranged on a glass table." />
+          <img src="images/produce.jpg" class="side-image img-responsive" alt="Group of vegetables (Cauliflower, lettuce head, and green, orange, and yellow peppers." />
         </aside>
-      </div>
-      <div class="col-xs-12 col-sm-8 col-md-9 main-text">
-        <h1 class="text-center ftg">Farm Program</h1>
-        <p class="bring-down text-center">
-          This is a chapel program that Saint Dismas not only sponsors but also started.
-        </p>
-        <img src="images/farm.JPG" class="main-column-img center-block responsive" alt="Deacon holding vegetables just harvested by the inmates working in the background.">
-    </div>
-  </div>
-
-
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-xs-12 col-sm-4 col-md-3">
-        <aside class="text-center">
-          <br><br>
-          <img src="images/squash.jpeg" class="side-image" alt="Bunch of bright yellow squash arranged on a green cloth." />
-        </aside>
-      </div>
-      <div class="col-xs-12 col-sm-8 col-md-9 main-text">
-        <p>
-          Saint Dismas Prison Ministry provided all the initial tools, hoses, seedd, boots, and printed manuals to get the inmates started, along with lemonade to help combat the heat and sweat of a hard day's work
-        </p>
-        <img src="images/farm1.JPG" class="main-column-img center-block responsive" alt="Inmate working in the farm field, posing with a Deacon and another official.">
-    </div>
-  </div>
-
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-xs-12 col-sm-4 col-md-3">
-        <aside class="text-center">
-          <br><br>
-          <img src="images/produce.jpeg" class="side-image" alt="Group of vegetables (orange pepper, corn in husk, cucumber, onion) arranged on a glass table." />
-        </aside>
-      </div>
-      <div class="col-xs-12 col-sm-8 col-md-9 main-text">
-        <p>
-          The program supplies the prison commissary with thousands of pounds of fresh produce at no cost to the prison.
-        </p>
-        <img src="images/farm2.JPG" class="main-column-img center-block responsive" alt="Group picture of inmates, Deacon, and other officials displaying the fruits of their labor.">
-    </div>
-  </div>
-
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-xs-12 col-sm-4 col-md-3">
-        <aside class="text-center">
-          <br><br>
-          <img src="images/tomatos.jpeg" class="side-image" alt="Group of vegetables (orange pepper, corn in husk, cucumber, onion) arranged on a glass table." />
-        </aside>
-      </div>
-      <div class="col-xs-12 col-sm-8 col-md-9 main-text">
-        <p>
-          However, most important, it gives the inmate farm workers a sense of pride in accomplishment as they participate with God in His creation.
-        </p>
-        <img src="images/farm3.jpeg" class="main-column-img center-block responsive" alt="Group picture of inmates working in the farm field and displaying the produce they have harvested.">
       </div>
     </div>
   </div>
-
 
   <footer class="">
     <div class="container">
