--- a/literacy-program.html
+++ b/literacy-program.html
@@ -54,17 +54,17 @@
                 <li><a href="literacy-program.html">Literacy Program</a></li>
                 <li><a href="gavel-club.html">Gavel Club (Toastmasters)</a></li>
                 <li><a href="veteran-posts.html">Veteran Posts</a></li>
-                <li><a href="merit-dorm.html">Merit Dorm</a></li>
+                <li><a href="merit-dorm.html">MERIT Dorm</a></li>
               </ul>
             </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How To Help <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="donations.html">Donations</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
+                <li><a href="prayer.html">Prayer to St.Dismas</a></li>
+
+                
+                
               </ul>
             </li>
             <li><a href="board.html">Board of Directors</a></li>
@@ -87,7 +87,7 @@
             <br>for the time is near.
             <br>&mdash;Revelation 1:3
           </p>
-          <img src="images/jesus-words.png" alt="Image of Jesus constructed solely of his words. Some words are legible." />
+          <img src="images/reading.jpg" alt="Person's hand holding a book open by the spine, text visible on the pages." />
         </aside>
       </div>
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
