--- a/merit-dorm.html
+++ b/merit-dorm.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" type="text/css" href="stylesheets/dismas.css">
   <link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Lato:400,400italic' rel='stylesheet' type='text/css'>
-  <title>Saint Dismas - Merit Dorm</title>
+  <title>Saint Dismas - MERIT Dorm</title>
 </head>
 
 <body>
@@ -54,17 +54,17 @@
                 <li><a href="literacy-program.html">Literacy Program</a></li>
                 <li><a href="gavel-club.html">Gavel Club (Toastmasters)</a></li>
                 <li><a href="veteran-posts.html">Veteran Posts</a></li>
-                <li><a href="merit-dorm.html">Merit Dorm</a></li>
+                <li><a href="merit-dorm.html">MERIT Dorm</a></li>
               </ul>
             </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How To Help <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="donations.html">Donations</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
+                <li><a href="prayer.html">Prayer to St.Dismas</a></li>
+
+                
+                
               </ul>
             </li>
             <li><a href="board.html">Board of Directors</a></li>
@@ -92,7 +92,7 @@
         </aside>
       </div>
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
-        <h1 class="text-center ftg">Merit Dorm</h1>
+        <h1 class="text-center ftg">MERIT Dorm</h1>
         <div class="text-center">
           <span class="cursive larger">M</span>orality<br>
           <span class="cursive larger">E</span>xcellence<br>
@@ -100,11 +100,10 @@
           <span class="cursive larger">I</span>ntegrity<br>
           <span class="cursive larger">T</span>rust
         </div>
-        <img src="images/inmate_praying.jpg" class="main-column-img center-block responsive" alt="Prisoner kneeling and praying in a prison chapel.">
         <p class="bring-down">
           The Saint Dismas Foundation was the prime mover in the establishment of a special, safer, housing unit for those inmates who "merit" it. Inmates who have enrolled in and completed self-betterment programs, and have had no "DR's" (disciplinary reports) in 24 months etc. are eligible to apply. As the sponsor St. Dismas agreed to fund the project.
-          (Canteen and Barber Shop in the approval process)
         </p>
+        <img src="images/inmate_praying.jpg" class="main-column-img center-block responsive" alt="Prisoner kneeling and praying in a prison chapel.">
       </div>
     </div>
   </div>
