--- a/prayer.html
+++ b/prayer.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/dismas.css">
     <link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lato:400,400italic' rel='stylesheet' type='text/css'>
-    <title>Saint Dismas Prison Ministry - Home</title>
+    <title>Prayer to St. Dismas</title>
   </head>
 
   <body>
@@ -28,7 +29,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="home.html#"><img src="images/logo_small.png" class="img-responsive" alt="Saint Dismas Prison Ministry Logo"></a>
+            <a class="navbar-brand" href="home.html"><img src="images/logo_small.png" alt="Saint Dismas Prison Ministry Logo"></a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
@@ -69,61 +70,6 @@
     </div>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-xs-12">
-          <div class="hero text-center row">
-              <h1 class="lead">
-                "LOCK 'EM UP
-                <br>AND THROW AWAY THE KEYS"
-              </h1>
-              <p>
-                That's what most in today's society say about prison inmates...
-              </p>
-              <p>
-                But Jesus mandates something quite diffrent to those who follow him:
-              </p>
-              <p>
-                That we visit them. (Matthew 25;31-36)
-              </p>
-
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-xs-12 col-sm-4 col-md-3">
-          <aside class="text-center">
-            <p>
-              “For God so loved the world,
-              <br>that he gave his only Son,
-              <br>that whoever believes in him
-              <br>should not perish but have eternal life.
-              <br>&mdash;John 3:16
-            </p>
-            <img src="images/jesus_bars_art_small.jpg" class="img-responsive" alt="Artist rendering of Jesus in Prison, and the cell being locked." />
-          </aside>
-        </div>
-        <div class="col-xs-12 col-sm-8 col-md-9 main-text">
-          <p>The overwhelming majority of prison inmates never get family visitors. They are truly God's forgotten people. For valid security reasons, prisons set rigid visitation rules re: eligibility, day, time, and length of visit. These rules are often
-            subject to change without notice, making visitation difficult. The few family and prison ministry visitors are all subject to the same rules.
-          </p>
-          <p>Consequently, inmates look forward with eager anticipation to these visits.</p>
-          <p>
-            Although two thirds of prison inmates are functionally illiterate many inmates crave reading materials, books, pamphlets and prayer books. Unfortunately these are considered contraband unless they are mailed in directly from the publisher or bookstore.
-            This generally requires family involvement or a source of funds from somewhere else.
-          </p>
-          <p>
-            Sadly, most are left with no outside contact and must fend for themselves. Inmates without the benefit of funds for the purchase of personal hygiene items (deodorant, toothpaste), stamps or packet of instant coffee from the prison canteen leads them to
-            the realization that no one cares about them. Acceptance of that fact by the inmate, produces loneliness and despair and breeds bitterness and a separation from goodness. It is so easy to see the "suffering Christ" in these inmates. The rigid
-            rules for visitors do not permit anything to be brought in (nothing in / nothing out).
-          </p>
-          <hr>
-        </div>
-      </div>
-    </div>
-
-    <div class="container-fluid">
-      <div class="row">
         <div class="col-xs-12 col-sm-4 col-md-3">
           <aside class="text-center">
             <p>
@@ -134,23 +80,44 @@
               <br>&mdash;Matthew 25:36, 40
               <br>
             </p>
-            <img src="images/jesus_bars.JPG" class="img-responsive" alt="Sketch of Jesus. Black and white." />
+            <img src="images/dismas.jpg" alt="Artist rendering of Jesus in Prison, and the cell being locked." />
           </aside>
         </div>
         <div class="col-xs-12 col-sm-8 col-md-9 main-text">
-          <div class="text-center">
-            <img src="images/reading_bible.jpg" class="img-responsive" alt="Image of window in prison cell with light streaming through." />
-          </div>
-          <p>
-            In 2006, recognizing these problems and a lack of programs to build self-esteem as a hindrance to ministering to the inmates, an ordained Roman Catholic Deacon, assigned as a Catholic chaplain to the prison, sought a solution to these problems. With the support of a local judge and few dedicated prison ministers, he founded The Saint Dismas Prison Ministry Foundation, an Internal Revenue Service qualified 501-C3 charitable corporation.
+          <h1 class="text-center ftg">Prayer to St. Dismas<br>The Repentant Thief</h1>
+          <p class="text-center cursive">
+            Saint Dismas, you were closer to<br>
+            Jesus in His agony on the cross, than<br>
+            even His Beloved mother Mary . . . <br>
+            Because of YOUR sincere and open<br>
+            confession of your sins to Jesus,<br>
+            as you hung beside Him on Calvary . . . <br>
+            and because of your true sorrow<br>
+            and repentance for them . . . <br>
+            You alone, of all the great Penitent<br>
+            Saints were directly canonized by Christ Himself;<br>
+            and you were assured of a place in Heaven<br>
+            with Him on that very day!! . . .
           </p>
-          <p>
-            The Saint Dismas Prison Ministry Foundation, registered with the State of Florida, was established to raise and disburse funds that will directly benefit prison inmates and ministry to them without regard to their religious affiliation.
+          <p class="text-center cursive">
+            Good Saint Dismas, now in paradise<br>
+            with the Lord ,  I ask you <br>
+            to intercede for me this day, <br>
+            as I express my sincere sorrow and repentance<br>
+            for my sins. I ask the Lord to forgive <br>
+            me and grant me the grace <br>
+            of perseverance so that I will <br>
+            never desert Him again . . . <br>
+            and  at the end of my life . . . <br>
+            may I hear from Him <br>
+            the same words that He spoke to you: <br>
+            "This day you will be with Me in Paradise."
+            &mdash;DLB
           </p>
+          <img src="images/three-crosses.jpg" class="main-column-img center-block responsive" alt="Three empty crosses standing in stark contrast to the dark orange sunset in the background.">
         </div>
       </div>
     </div>
-
     <footer class="">
       <div class="container">
         <div class="row">
@@ -164,7 +131,7 @@
             </p>
           </div>
           <div class="col-xs-4 text-center">
-            <img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" />
+            <img src="images/logo_small.png" class="logo" alt="Saint Dismas Prison Ministry Logo" />
           </div>
           <div class="col-xs-4">
             <p class="text-right footer-right">
