--- a/santa.html
+++ b/santa.html
@@ -54,17 +54,17 @@
                 <li><a href="literacy-program.html">Literacy Program</a></li>
                 <li><a href="gavel-club.html">Gavel Club (Toastmasters)</a></li>
                 <li><a href="veteran-posts.html">Veteran Posts</a></li>
-                <li><a href="merit-dorm.html">Merit Dorm</a></li>
+                <li><a href="merit-dorm.html">MERIT Dorm</a></li>
               </ul>
             </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How To Help <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="donations.html">Donations</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
+                <li><a href="prayer.html">Prayer to St.Dismas</a></li>
+
+                
+                
               </ul>
             </li>
             <li><a href="board.html">Board of Directors</a></li>
@@ -99,13 +99,13 @@
         <p>
           Children with a parent in jail or prison are teased more often at school. Some internalize the stigma and experience lower self-esteem, especially if they identify with the incarcerated parent. Others may react with anger, defiance, and a desire for retaliation against those who reject and taunt them.
         </p>
-        <img src="images/three-crosses.jpg" class="main-column-img center-block responsive" alt="Inmates jogging along a razor wire fence.">
         <p>
           The Saint Dismas Prison Ministry Foundation has a program called "SANTA IN PRISON." This program reaches out to the children of inmates who might not otherwise receive a gift for Christmas.
         </p>
         <p>
           On Christmas morning, when children come to the prison to visit their fathers, he or she receives a Christmas gift from Deacon Don and Pam Battiston, and from Deacon George and Judy Kinard, with the words, "Your Dad wanted you to have this for Christmas."
         </p>
+        <img src="images/delivery.jpg" class="main-column-img center-block responsive" alt="Back of a van, doors flung open, and the inside is overflowing with presents. Two men stand on the side, smiling as they get ready to deliver presents to children.">
       </div>
     </div>
   </div>
