--- a/creed.html
+++ b/creed.html
@@ -40,11 +40,7 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Our Work <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="funds.html">Indigent Inmate Funds</a></li>
-                  <li><a href="packages.html">EOS Packages</a></li>
-                  <li><a href="fresh-start.html">Fresh Start Program</a></li>
-                  <li><a href="family-assistance.html">Family Assistance</a></li>
-                  <li role="separator" class="divider"></li>
+                  <li><a href="inmate-aid.html">Inmate Aid</a></li>
                   <li><a href="greeting-cards.html">Greeting Card Program</a></li>
                   <li><a href="art-program.html">Art Program</a></li>
                   <li><a href="farm-program.html">Farm Program</a></li>
@@ -56,18 +52,17 @@
                   <li><a href="literacy-program.html">Literacy Program</a></li>
                   <li><a href="gavel-club.html">Gavel Club (Toastmasters)</a></li>
                   <li><a href="veteran-posts.html">Veteran Posts</a></li>
-                  <li><a href="merit-dorm.html">Merit Dorm</a></li>
-                  <li><a href="training.html">Educational &amp; Vocational Training</a></li>
+                  <li><a href="merit-dorm.html">MERIT Dorm</a></li>
                 </ul>
               </li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How To Help <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="donations.html">Donations</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">Separated link</a></li>
+                  <li><a href="prayer.html">Prayer to St.Dismas</a></li>
+
+
+                  
                 </ul>
               </li>
               <li><a href="board.html">Board of Directors</a></li>
