--- a/gavel-club.html
+++ b/gavel-club.html
@@ -54,17 +54,17 @@
                 <li><a href="literacy-program.html">Literacy Program</a></li>
                 <li><a href="gavel-club.html">Gavel Club (Toastmasters)</a></li>
                 <li><a href="veteran-posts.html">Veteran Posts</a></li>
-                <li><a href="merit-dorm.html">Merit Dorm</a></li>
+                <li><a href="merit-dorm.html">MERIT Dorm</a></li>
               </ul>
             </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How To Help <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="donations.html">Donations</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
+                <li><a href="prayer.html">Prayer to St.Dismas</a></li>
+
+                
+                
               </ul>
             </li>
             <li><a href="board.html">Board of Directors</a></li>
@@ -94,7 +94,10 @@
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
         <h1 class="text-center ftg">Gavel Club (Toastmasters)</h1>
         <p class="bring-down">
-          Enables inmates to gain confidence and skills in public speaking.
+          The prison and the world needs positive leaders. These leaders must not only accomplish, they must communicate. By regularly giving speeches, gaining feedback, leading teams, and guiding others to achieve their goals in a supportive atmosphere, leaders emerge from the Toastmasters program. Every Toastmasters journey begins with a single speech. During their journey, they learn to tell their stories. They listen and answer. They plan and lead. They give feedback—and accept it. Through our community of learners, they find their path to leadership.
+        </p>
+        <p>
+          One of our inmates was awarded the prestigious Advanced Gavelier Silver Communicator Award by  Toastmaster International. But of couse, the most important value of the program is the development of self confidence and a positive self image.
         </p>
         <img src="images/prison.jpg" class="main-column-img center-block responsive" alt="Prisoner looking at a massive razor wire structure through cell bars.">
       </div>
