--- a/veteran-posts.html
+++ b/veteran-posts.html
@@ -54,17 +54,17 @@
                 <li><a href="literacy-program.html">Literacy Program</a></li>
                 <li><a href="gavel-club.html">Gavel Club (Toastmasters)</a></li>
                 <li><a href="veteran-posts.html">Veteran Posts</a></li>
-                <li><a href="merit-dorm.html">Merit Dorm</a></li>
+                <li><a href="merit-dorm.html">MERIT Dorm</a></li>
               </ul>
             </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How To Help <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="donations.html">Donations</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
+                <li><a href="prayer.html">Prayer to St.Dismas</a></li>
+
+                
+                
               </ul>
             </li>
             <li><a href="board.html">Board of Directors</a></li>
@@ -97,7 +97,6 @@
         <p class="bring-down">
           Saint Dismas sponsors the formation and operation of American Legion posts, acknowledging the positive contributions that inmate vets have made to this great country. We also pay the membership fees for indigent inmates who qualify to join the American Legion Post but can't afford to.
         </p>
-        <img src="images/confirmation.JPG" class="main-column-img center-block responsive" alt="Prisoner looking at a massive razor wire structure through cell bars.">
       </div>
     </div>
   </div>
