Fixed minor position issue.

--- a/home.html
+++ b/home.html
@@ -67,6 +67,7 @@
         </div><!-- /.container-fluid -->
       </nav>
     </div>
+
     <div class="container-fluid">
       <div class="row">
         <div class="col-xs-12">
@@ -89,6 +90,7 @@
         </div>
       </div>
     </div>
+
     <div class="container-fluid">
       <div class="row">
         <div class="col-xs-12 col-sm-4 col-md-3">
@@ -138,7 +140,7 @@
           </aside>
         </div>
         <div class="col-xs-12 col-sm-8 col-md-9 main-text">
-          <div class="text-center">
+          <div class="text-center bring-up">
             <img src="images/reading_bible.jpg" class="img-responsive" alt="Image of window in prison cell with light streaming through." />
           </div>
           <p>
