--- a/home.html
+++ b/home.html
@@ -5,10 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="javascripts/dismas.js"></script>
 
     <link rel="stylesheet" type="text/css" href="stylesheets/dismas.css">
     <link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
@@ -21,14 +17,14 @@
       <nav class="navbar navbar-default navbar-custom">
         <div class="container-fluid">
           <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header">
+          <div class="navbar-header text-center">
+            <a class="navbar-brand" href="home.html#"><img src="images/logo_small.png" class="img-responsive" alt="Saint Dismas Prison Ministry Logo"></a>
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="home.html#"><img src="images/logo_small.png" class="img-responsive" alt="Saint Dismas Prison Ministry Logo"></a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
@@ -69,7 +65,7 @@
     </div>
 
     <div class="container-fluid">
-      <div class="row">
+      <div class="row banner">
         <div class="col-xs-12">
           <div class="hero text-center row">
               <h1 class="lead">
@@ -89,9 +85,7 @@
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="container-fluid">
       <div class="row">
         <div class="col-xs-12 col-sm-4 col-md-3">
           <aside class="text-center">
@@ -103,6 +97,17 @@
               <br>&mdash;John 3:16
             </p>
             <img src="images/jesus_bars_art_small.jpg" class="img-responsive" alt="Artist rendering of Jesus in Prison, and the cell being locked." />
+          </aside>
+          <aside class="text-center hidden-xs">
+            <p>
+              “I was in prison and you came to visit me...
+              <br>I tell you the truth, whatever you did
+              <br>for one of the least of these brothers
+              <br>of mine, you did for me.”
+              <br>&mdash;Matthew 25:36, 40
+              <br>
+            </p>
+            <img src="images/jesus_bars.JPG" class="img-responsive" alt="Sketch of Jesus. Black and white." />
           </aside>
         </div>
         <div class="col-xs-12 col-sm-8 col-md-9 main-text">
@@ -120,13 +125,17 @@
             rules for visitors do not permit anything to be brought in (nothing in / nothing out).
           </p>
           <hr>
+          <div class="text-center">
+            <img src="images/reading_bible.jpg" class="img-responsive main-column-img" alt="Image of window in prison cell with light streaming through." />
+          </div>
+          <p>
+            In 2006, recognizing these problems and a lack of programs to build self-esteem as a hindrance to ministering to the inmates, an ordained Roman Catholic Deacon, assigned as a Catholic chaplain to the prison, sought a solution to these problems. With the support of a local judge and few dedicated prison ministers, he founded The Saint Dismas Prison Ministry Foundation, an Internal Revenue Service qualified 501-C3 charitable corporation.
+          </p>
+          <p>
+            The Saint Dismas Prison Ministry Foundation, registered with the State of Florida, was established to raise and disburse funds that will directly benefit prison inmates and ministry to them without regard to their religious affiliation.
+          </p>
         </div>
-      </div>
-    </div>
-
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-xs-12 col-sm-4 col-md-3">
+        <div class="col-xs-12 visible-xs">
           <aside class="text-center">
             <p>
               “I was in prison and you came to visit me...
@@ -139,20 +148,8 @@
             <img src="images/jesus_bars.JPG" class="img-responsive" alt="Sketch of Jesus. Black and white." />
           </aside>
         </div>
-        <div class="col-xs-12 col-sm-8 col-md-9 main-text">
-          <div class="text-center bring-up">
-            <img src="images/reading_bible.jpg" class="img-responsive" alt="Image of window in prison cell with light streaming through." />
-          </div>
-          <p>
-            In 2006, recognizing these problems and a lack of programs to build self-esteem as a hindrance to ministering to the inmates, an ordained Roman Catholic Deacon, assigned as a Catholic chaplain to the prison, sought a solution to these problems. With the support of a local judge and few dedicated prison ministers, he founded The Saint Dismas Prison Ministry Foundation, an Internal Revenue Service qualified 501-C3 charitable corporation.
-          </p>
-          <p>
-            The Saint Dismas Prison Ministry Foundation, registered with the State of Florida, was established to raise and disburse funds that will directly benefit prison inmates and ministry to them without regard to their religious affiliation.
-          </p>
-        </div>
       </div>
     </div>
-
     <footer class="">
       <div class="container">
         <div class="row">
@@ -180,6 +177,10 @@
       </div>
     </footer>
 
-  </body>
+    <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="javascripts/dismas.js"></script>
 
+  </body>
 </html>
